# PicPocket

./: README.md  manage.py  pyproject.toml
picapp/: admin.py  forms.py  models.py  urls.py  views.py
picapp/migrations/: 0001_initial.py
picapp/static/css/: styles.css
picapp/templates/: base.html  index.html
picpocket/: asgi.py  settings.py  urls.py  wsgi.py
